@@ -14,6 +14,10 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+08 November 2014 - V.Ivanchenko (hadr-cohe-V10-00-18)
+-----------------------------------------------------------------
+- G4LMsdGenerator - fixed read out of the boundary
+
 07 November 2014 - V.Ivanchenko (hadr-cohe-V10-00-17)
 -----------------------------------------------------------------
 07 November 2014 V. Grichine fixed class G4LMsdGenerator 
